--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "play": "nodemon ./bin/www"
   },
   "dependencies": {
     "azure-storage": "^2.8.0",
@@ -16,6 +17,7 @@
     "into-stream": "^3.1.0",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
+    "nodemon": "^2.0.12",
     "serve-favicon": "~2.4.5"
   }
 }
