--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "play": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@azure/cosmos": "^3.12.0",
     "azure-storage": "^2.8.0",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
