--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.15.5",
     "hbs": "~4.0.1",
     "into-stream": "^3.1.0",
+    "moment": "^2.29.1",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
     "nodemon": "^2.0.12",
