Logic to store hashtag for each upload

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@ AZURE_COSMOS_ENDPOINT=<Cosmos endpoint goes here>
 AZURE_COSMOS_PRIMARY_KEY=<Cosmos primary key goes here>
 AZURE_COSMOS_DATABASE_ID=<Cosmos database id goes here>
 AZURE_COSMOS_CONTAINER_ID=<Cosmos container id goes here>
+AZURE_COSMOS_HASHTAGS_CONTAINER_ID=<Cosmos container id goes here>
 AZURE_COSMOS_PARTITION_KEY=<Cosmos partition key goes here>
