--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "azure-storage": "^2.8.0",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^5.0.1",
     "express": "~4.15.5",
