--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ AZURE_COSMOS_DATABASE_ID=<Cosmos database id goes here>
 AZURE_COSMOS_CONTAINER_ID=<Cosmos container id goes here>
 AZURE_COSMOS_HASHTAGS_CONTAINER_ID=<Cosmos container id goes here>
 AZURE_COSMOS_NOTEBOOKS_CONTAINER_ID=notebooks
+AZURE_COSMOS_USER_NOTES_CONTAINER_ID=user_reels
 AZURE_COSMOS_PARTITION_KEY=<Cosmos partition key goes here>
 AZURE_COSMOS_HASHTAG_PARTITION_KEY=/hashtag
 AZURE_COSMOS_NOTEBOOKS_PARTITION_KEY=/user_id
+AZURE_COSMOS_USER_NOTES_PARTITION_KEY=/notebook_id
